# RegUtils

./: CMakeLists.txt  CMakePresets.json  RegUtils.cpp  RegUtils.h
public/PiSubmarine/: RegUtils.h
src/: CMakeLists.txt  RegUtils.cpp
src/PiSubmarine/: RegUtils.cpp
test/: CMakeLists.txt
test/PiSubmarine/: RegUtilsTest.cpp
vcpkg/triplets/: x64-windows-static-md.cmake
